--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Ather Biswas </span>world!</h1>
+            <h3>I am a Mern stack develpoer</h3>
+            <p>I started my coding journey almost exactly a year ago and now I'm working full time and doing freelance
+                projects on the side for my friends. You may have noticed from my portfolio, but I'm obsessed with unique,
+                interesting design and user-friendly functionality so hit me up with your weird artistic project ideas or
+                app proposals.</p>
+            <a class="link-button" href="#">HIRE Me</a>
+        </div>
+        <div class="half-width">
+            <img src="img/my-pic0.png" alt="My first pic">
+        </div>
+    </section>
+
 </body>
+
 </html>
