--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
             <img src="img/my-pic0.png" alt="My first pic">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="img/my-pic2.png" alt="my picture">
+        </div>
+        <div class="half-width">
+            <h1>Gain Dream</h1>
+            <h3>Become a web developer</h3>
+            <p>To become a Web Developer, you should have an understanding of HTML, CSS, and JavaScript. It’s also recommended to learn about CSS and CSS frameworks. Developing these fundamental web development skills will give you the foundation and logic for communicating with programming languages.</p>
+            <a class="link-button" href="#">Download Reasume</a>
+        </div>
+    </section>
 
 </body>
 
