--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Ather Biswas </span>world!</h1>
@@ -28,7 +28,7 @@
             <img src="img/my-pic0.png" alt="My first pic">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="img/my-pic2.png" alt="my picture">
         </div>
@@ -39,7 +39,26 @@
             <a class="link-button" href="#">Download Reasume</a>
         </div>
     </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="junior-dev" class="experience-item">
+                <h2>Junior web developer</h2>
+                <h3 class="orange-color">2020-2021 Hero develpoer </h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa adipisci, quibusdam expedita temporibus nulla iste error commodi officia aperiam. Veritatis!</p>
+            </div>
+            <div id="senior-dev" class="experience-item">
+                <h2>Senior web developer</h2>
+                <h3 class="orange-color">2021-At Present pro level developer</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi et earum eum a voluptatem vel nesciunt. Dignissimos reprehenderit doloribus necessitatibus optio quibusdam magni corporis aliquam.</p>
+            </div>
+        </div>
+
+    </section>
 
 </body>
+<footer>
+    <p>This Website coded by @Ather Biswas</p>
+</footer>
 
 </html>
