--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
         <div class="flexible-container">
             <div id="junior-dev" class="experience-item">
                 <h2>Junior web developer</h2>
-                <h3 class="orange-color">2020-2021 Hero develpoer </h3>
+                <h3 class="orange-color">2020-2021 @Hero develpoer </h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa adipisci, quibusdam expedita temporibus nulla iste error commodi officia aperiam. Veritatis!</p>
             </div>
             <div id="senior-dev" class="experience-item">
                 <h2>Senior web developer</h2>
-                <h3 class="orange-color">2021-At Present pro level developer</h3>
+                <h3 class="orange-color">2021-At Present  @pro level developer</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi et earum eum a voluptatem vel nesciunt. Dignissimos reprehenderit doloribus necessitatibus optio quibusdam magni corporis aliquam.</p>
             </div>
         </div>
@@ -58,7 +58,9 @@
 
 </body>
 <footer>
-    <p>This Website coded by @Ather Biswas</p>
+    <p>This Website coded by <span class="footer">@Ather Biswas</span></p>
+    <p>Ref: Programming Hero</p>
 </footer>
+<br><br>
 
 </html>
